# FinOps-API

./: .gitignore  README.md  pyproject.toml  run.sh
finops_api/: config.py  main.py
finops_api/dependencies/: __init__.py  providers.py
finops_api/dependencies/clients/: __init__.py  budgets_client.py  cloudwatch_client.py  cost_explorer_client.py  optimization_client.py  resource_inventory_client.py
finops_api/models/: __init__.py  response.py
finops_api/routers/: __init__.py  budgets.py  costs.py  inventory.py  metrics.py  optimization.py  reports.py
tests/: simple_test.py  test_client.py  test_startup.py
web_demo/: demo_server.py  webui.html
webui/: demo_server.py  index.html
